Ok I must say that I really liked the callbacks

--- a/1.Basics/keras-basics.ipynb
+++ b/1.Basics/keras-basics.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -1087,12 +1088,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's try adding some callbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 11610 samples, validate on 3870 samples\n",
+      "Epoch 1/20\n",
+      "11610/11610 [==============================] - 1s 96us/sample - loss: 1.3516 - output_1_loss: 1.2552 - output_2_loss: 2.2156 - val_loss: 0.6512 - val_output_1_loss: 0.5992 - val_output_2_loss: 1.1178\n",
+      "Epoch 2/20\n",
+      "11610/11610 [==============================] - 1s 55us/sample - loss: 0.6317 - output_1_loss: 0.5886 - output_2_loss: 1.0176 - val_loss: 0.5263 - val_output_1_loss: 0.4778 - val_output_2_loss: 0.9621\n",
+      "Epoch 3/20\n",
+      "11610/11610 [==============================] - 1s 56us/sample - loss: 0.5071 - output_1_loss: 0.4654 - output_2_loss: 0.8817 - val_loss: 0.4790 - val_output_1_loss: 0.4389 - val_output_2_loss: 0.8397\n",
+      "Epoch 4/20\n",
+      "11610/11610 [==============================] - 1s 57us/sample - loss: 0.4627 - output_1_loss: 0.4266 - output_2_loss: 0.7866 - val_loss: 0.4559 - val_output_1_loss: 0.4218 - val_output_2_loss: 0.7620\n",
+      "Epoch 5/20\n",
+      "11610/11610 [==============================] - 1s 56us/sample - loss: 0.4408 - output_1_loss: 0.4099 - output_2_loss: 0.7192 - val_loss: 0.4411 - val_output_1_loss: 0.4112 - val_output_2_loss: 0.7087\n",
+      "Epoch 6/20\n",
+      "11610/11610 [==============================] - 1s 65us/sample - loss: 0.4282 - output_1_loss: 0.4007 - output_2_loss: 0.6749 - val_loss: 0.4307 - val_output_1_loss: 0.4039 - val_output_2_loss: 0.6703\n",
+      "Epoch 7/20\n",
+      "11610/11610 [==============================] - 1s 110us/sample - loss: 0.4263 - output_1_loss: 0.4016 - output_2_loss: 0.6485 - val_loss: 0.4291 - val_output_1_loss: 0.4026 - val_output_2_loss: 0.6668\n",
+      "Epoch 8/20\n",
+      "11610/11610 [==============================] - 1s 103us/sample - loss: 0.4122 - output_1_loss: 0.3877 - output_2_loss: 0.6314 - val_loss: 0.4240 - val_output_1_loss: 0.4002 - val_output_2_loss: 0.6367\n",
+      "Epoch 9/20\n",
+      "11610/11610 [==============================] - 1s 91us/sample - loss: 0.4057 - output_1_loss: 0.3823 - output_2_loss: 0.6168 - val_loss: 0.4146 - val_output_1_loss: 0.3912 - val_output_2_loss: 0.6238\n",
+      "Epoch 10/20\n",
+      "11610/11610 [==============================] - 1s 57us/sample - loss: 0.3992 - output_1_loss: 0.3761 - output_2_loss: 0.6065 - val_loss: 0.4027 - val_output_1_loss: 0.3798 - val_output_2_loss: 0.6079\n",
+      "Epoch 11/20\n",
+      "11610/11610 [==============================] - 1s 57us/sample - loss: 0.3963 - output_1_loss: 0.3738 - output_2_loss: 0.5982 - val_loss: 0.4044 - val_output_1_loss: 0.3824 - val_output_2_loss: 0.6007\n",
+      "Epoch 12/20\n",
+      "11610/11610 [==============================] - 1s 74us/sample - loss: 0.3897 - output_1_loss: 0.3676 - output_2_loss: 0.5895 - val_loss: 0.3930 - val_output_1_loss: 0.3710 - val_output_2_loss: 0.5900\n",
+      "Epoch 13/20\n",
+      "11610/11610 [==============================] - 1s 59us/sample - loss: 0.3843 - output_1_loss: 0.3623 - output_2_loss: 0.5827 - val_loss: 0.3873 - val_output_1_loss: 0.3651 - val_output_2_loss: 0.5860\n",
+      "Epoch 14/20\n",
+      "11610/11610 [==============================] - 1s 61us/sample - loss: 0.3813 - output_1_loss: 0.3595 - output_2_loss: 0.5768 - val_loss: 0.3900 - val_output_1_loss: 0.3691 - val_output_2_loss: 0.5775\n",
+      "Epoch 15/20\n",
+      "11610/11610 [==============================] - 1s 57us/sample - loss: 0.3742 - output_1_loss: 0.3525 - output_2_loss: 0.5680 - val_loss: 0.3777 - val_output_1_loss: 0.3564 - val_output_2_loss: 0.5678\n",
+      "Epoch 16/20\n",
+      "11610/11610 [==============================] - 1s 56us/sample - loss: 0.3715 - output_1_loss: 0.3502 - output_2_loss: 0.5621 - val_loss: 0.3762 - val_output_1_loss: 0.3551 - val_output_2_loss: 0.5648\n",
+      "Epoch 17/20\n",
+      "11610/11610 [==============================] - 1s 55us/sample - loss: 0.3680 - output_1_loss: 0.3473 - output_2_loss: 0.5537 - val_loss: 0.4174 - val_output_1_loss: 0.4014 - val_output_2_loss: 0.5601\n",
+      "Epoch 18/20\n",
+      "11610/11610 [==============================] - 1s 65us/sample - loss: 0.3671 - output_1_loss: 0.3471 - output_2_loss: 0.5471 - val_loss: 0.3709 - val_output_1_loss: 0.3505 - val_output_2_loss: 0.5541\n",
+      "Epoch 19/20\n",
+      "11610/11610 [==============================] - 1s 48us/sample - loss: 0.3623 - output_1_loss: 0.3425 - output_2_loss: 0.5408 - val_loss: 0.3657 - val_output_1_loss: 0.3454 - val_output_2_loss: 0.5476\n",
+      "Epoch 20/20\n",
+      "11610/11610 [==============================] - 1s 54us/sample - loss: 0.3646 - output_1_loss: 0.3456 - output_2_loss: 0.5354 - val_loss: 0.3631 - val_output_1_loss: 0.3439 - val_output_2_loss: 0.5341\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = WideAndDeepModel()\n",
+    "model.compile(loss=[\"mse\", \"mse\"], loss_weights=[0.9, 0.1], optimizer=\"sgd\")\n",
+    "\n",
+    "checkpoint_cb = keras.callbacks.ModelCheckpoint('my_keras_model_weight.h5')\n",
+    "history = model.fit(\n",
+    "    [X_train_A, X_train_B], [y_train, y_train], epochs=20,\n",
+    "    validation_data=([X_valid_A, X_valid_B], [y_valid, y_valid]),\n",
+    "    callbacks=[checkpoint_cb])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights('my_keras_model_weights.h5')"
+    "# You can also do this little trick to combine Early Stopping with saving checkpoint\n",
+    "early_stopping_cb = keras.callbacks.EarlyStopping(patience=10, restore_best_weights=True)\n",
+    "history = model.fit(X_train, y_train, epochs=100, validation_data=(X_valid, y_valid),\n",
+    "callbacks=[checkpoint_cb, early_stopping_cb])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And surely a custom callback, simply create a class that enherits from keras` Callback\n",
+    "class PrintValTrainRationCallback(keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self, epoch, logs):\n",
+    "        print(\"\\nval/train: {:.2f}\".format(logs[\"val_loss\"] / logs[\"loss\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
